# iced_musical_typing

./: .gitignore  Cargo.toml  README.md  example.env
assets/: .icon.png-autosave.kra  icon.png~
assets/kana_maps/: hiragana.json  kanji-grade-1.json  kanji-grade-2.json  kanji-grade-3.json  kanji-grade-4.json  kanji-grade-5.json  kanji-grade-6.json  kanji-jinmeiyo.json  kanji-joyo.json  katakana.json  special.json
src/: char_controller.rs  main.rs  spotify_controller.rs  text_controller.rs
util/generate_kanji_maps/: .gitignore  README.md  generate_kanji_maps.py  pyproject.toml
