[package]
name = "iced_musical_typing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env = "1.0.1"
env_file = "0.1.3"
env_logger = "0.11.8"
iced = { version = "0.13.1", features = ["tokio"] }
rand = "0.9.2"
reqwest = "0.12.24"
rspotify = { version = "0.15.3", features = ["cli", "env-file"] }
serde_json = "1.0.145"
tokio = "1.48.0"
