[package]
name = "iced_musical_typing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env = "1.0.1"
env_file = "0.1.3"
env_logger = "0.11.8"
iced = { version = "0.13.1", features = ["tokio"] }
log = "0.4.28"
rand = "0.9.2"
reqwest = "0.12.24"
rspotify = { version = "0.15.3", features = ["cli", "env-file"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
